# ocsipersist

./: .ocamlformat  README.md  dune-project  index.html  ocsipersist-dbm-config.opam  ocsipersist-dbm.opam  ocsipersist-dbm.opam.template  ocsipersist-dynamodb.opam  ocsipersist-dynamosql.opam  ocsipersist-lib.opam  ocsipersist-pgsql-config.opam  ocsipersist-pgsql.opam  ocsipersist-sqlite-config.opam  ocsipersist-sqlite.opam  ocsipersist.opam
.github/workflows/: deploy-doc.yml
ocsipersist/: index.html
ocsipersist-dbm/: index.html
ocsipersist-dbm-config/: index.html
ocsipersist-dbm-config/Ocsipersist_config/: index.html
ocsipersist-dbm/Ocsidbmtypes/: index.html
ocsipersist-dbm/Ocsipersist_settings/: index.html
ocsipersist-lib/: index.html
ocsipersist-lib/Ocsipersist_lib/: index.html
ocsipersist-lib/Ocsipersist_lib/Polymorphic/: index.html
ocsipersist-lib/Ocsipersist_lib/Polymorphic/argument-1-Functorial/: index.html
ocsipersist-lib/Ocsipersist_lib/Polymorphic/argument-1-Functorial/Column/: index.html
ocsipersist-lib/Ocsipersist_lib/Polymorphic/argument-1-Functorial/Column/Float/: index.html
ocsipersist-lib/Ocsipersist_lib/Polymorphic/argument-1-Functorial/Column/Marshal/: index.html
ocsipersist-lib/Ocsipersist_lib/Polymorphic/argument-1-Functorial/Column/Marshal/argument-1-C/: index.html
ocsipersist-lib/Ocsipersist_lib/Polymorphic/argument-1-Functorial/Column/String/: index.html
ocsipersist-lib/Ocsipersist_lib/Polymorphic/argument-1-Functorial/Table/: index.html
ocsipersist-lib/Ocsipersist_lib/Polymorphic/argument-1-Functorial/Table/Variable/: index.html
ocsipersist-lib/Ocsipersist_lib/Polymorphic/argument-1-Functorial/Table/argument-1-T/: index.html
ocsipersist-lib/Ocsipersist_lib/Polymorphic/argument-1-Functorial/Table/argument-2-Key/: index.html
ocsipersist-lib/Ocsipersist_lib/Polymorphic/argument-1-Functorial/Table/argument-3-Value/: index.html
ocsipersist-lib/Ocsipersist_lib/Polymorphic/argument-1-Functorial/module-type-COLUMN/: index.html
ocsipersist-lib/Ocsipersist_lib/Ref/: index.html
ocsipersist-lib/Ocsipersist_lib/Ref/argument-1-Store/: index.html
ocsipersist-lib/Ocsipersist_lib/Sigs/: index.html
ocsipersist-lib/Ocsipersist_lib/Sigs/module-type-FUNCTORIAL/: index.html
ocsipersist-lib/Ocsipersist_lib/Sigs/module-type-FUNCTORIAL/Column/: index.html
ocsipersist-lib/Ocsipersist_lib/Sigs/module-type-FUNCTORIAL/Column/Float/: index.html
ocsipersist-lib/Ocsipersist_lib/Sigs/module-type-FUNCTORIAL/Column/Marshal/: index.html
ocsipersist-lib/Ocsipersist_lib/Sigs/module-type-FUNCTORIAL/Column/Marshal/argument-1-C/: index.html
ocsipersist-lib/Ocsipersist_lib/Sigs/module-type-FUNCTORIAL/Column/String/: index.html
ocsipersist-lib/Ocsipersist_lib/Sigs/module-type-FUNCTORIAL/Table/: index.html
ocsipersist-lib/Ocsipersist_lib/Sigs/module-type-FUNCTORIAL/Table/Variable/: index.html
ocsipersist-lib/Ocsipersist_lib/Sigs/module-type-FUNCTORIAL/Table/argument-1-T/: index.html
ocsipersist-lib/Ocsipersist_lib/Sigs/module-type-FUNCTORIAL/Table/argument-2-Key/: index.html
ocsipersist-lib/Ocsipersist_lib/Sigs/module-type-FUNCTORIAL/Table/argument-3-Value/: index.html
ocsipersist-lib/Ocsipersist_lib/Sigs/module-type-FUNCTORIAL/module-type-COLUMN/: index.html
ocsipersist-lib/Ocsipersist_lib/Sigs/module-type-POLYMORPHIC/: index.html
ocsipersist-lib/Ocsipersist_lib/Sigs/module-type-REF/: index.html
ocsipersist-lib/Ocsipersist_lib/Sigs/module-type-STORE/: index.html
ocsipersist-lib/Ocsipersist_lib/Sigs/module-type-TABLE/: index.html
ocsipersist-lib/Ocsipersist_lib/Sigs/module-type-TABLE/Variable/: index.html
ocsipersist-lib/Ocsipersist_lib/Variable/: index.html
ocsipersist-lib/Ocsipersist_lib/Variable/argument-1-T/: index.html
ocsipersist-pgsql/: index.html
ocsipersist-pgsql-config/: index.html
ocsipersist-pgsql-config/Ocsipersist_config/: index.html
ocsipersist-pgsql/Ocsipersist_settings/: index.html
ocsipersist-sqlite/: index.html
ocsipersist-sqlite-config/: index.html
ocsipersist-sqlite-config/Ocsipersist_config/: index.html
ocsipersist-sqlite/Ocsipersist_settings/: index.html
ocsipersist-store/: __ocsipersist_ref_store__.otbl.pag
ocsipersist/Ocsipersist/: index.html
ocsipersist/Ocsipersist/Functorial/: index.html
ocsipersist/Ocsipersist/Functorial/Column/: index.html
ocsipersist/Ocsipersist/Functorial/Column/Float/: index.html
ocsipersist/Ocsipersist/Functorial/Column/Marshal/: index.html
ocsipersist/Ocsipersist/Functorial/Column/Marshal/argument-1-C/: index.html
ocsipersist/Ocsipersist/Functorial/Column/String/: index.html
ocsipersist/Ocsipersist/Functorial/Table/: index.html
ocsipersist/Ocsipersist/Functorial/Table/Variable/: index.html
ocsipersist/Ocsipersist/Functorial/Table/argument-1-T/: index.html
ocsipersist/Ocsipersist/Functorial/Table/argument-2-Key/: index.html
ocsipersist/Ocsipersist/Functorial/Table/argument-3-Value/: index.html
ocsipersist/Ocsipersist/Functorial/module-type-COLUMN/: index.html
ocsipersist/Ocsipersist/Polymorphic/: index.html
ocsipersist/Ocsipersist/Ref/: index.html
ocsipersist/Ocsipersist/Store/: index.html
src/: dune  ocsipersist.mli  ocsipersist_lib.ml
src/dbm/: dune  index.mld  ocsidbm.ml  ocsidbmtypes.mli  ocsipersist.ml  ocsipersist_config.ml  ocsipersist_config.mli  ocsipersist_settings.ml  ocsipersist_settings.mli
src/dynamodb/: dune  index.mld  ocsipersist.ml
src/dynamosql/: dune  dynamodb.ml  index.mld  ocsipersist.ml  pgsql.ml
src/ocsipersist-sqlite/: dune
src/pgsql/: dune  index.mld  ocsipersist.ml  ocsipersist_config.ml  ocsipersist_config.mli  ocsipersist_settings.ml  ocsipersist_settings.mli
src/sqlite/: dune  index.mld  ocsipersist.ml  ocsipersist_config.ml  ocsipersist_config.mli  ocsipersist_settings.ml  ocsipersist_settings.mli
test/: dune
test/sqlite/sqlite.t/: dune  run.t  test.ml
