opam-version: "2.0"
name:         "ocsipersist-dbm-config"
version:      "2.0.0"
authors:      "The Ocsigen team <dev@ocsigen.org>"
maintainer:   "Jan Rochel <jan@besport.com>"
license:      "LGPL-2.1-only WITH OCaml-LGPL-linking-exception"
synopsis:     "Ocsigen Server configuration file extension for ocsipersist-dbm"
description:  "Load this package from Ocsigen Server's configuration file if you want to use the DBM storage backend."

homepage: "https://github.com/ocsigen/ocsipersist"
bug-reports: "https://github.com/ocsigen/ocsipersist/issues"
dev-repo: "git+https://github.com/ocsigen/ocsipersist.git"
build:   [ "dune" "build" "-p" name "-j" jobs ]

depends: [
  "dune" {>= "2.9"}
  "xml-light"
  "ocsigenserver" {>= "3.0.0"}
  "ocsipersist-dbm" {>= "2.0.0" & < "2.1.0"}
]
