opam-version: "2.0"
name:         "ocsipersist-dbm"
version:      "1.0"
authors:      "The Ocsigen team <dev@ocsigen.org>"
maintainer:   "Jan Rochel <jan@besport.com>"
license:      "LGPL-2.1-only with OCaml-LGPL-linking-exception"
synopsis:     "Persistent key/value storage (for Ocsigen) using DBM"
description:  "This library provides a DBM backend for the unified key/value storage frontend as defined in the ocsipersist package. Ocsipersist is used pervasively in Eliom/Ocsigen to handle sessions and references. It can be used as an extension for ocsigenserver or as a library."

homepage: "https://github.com/ocsigen/ocsipersist"
bug-reports: "https://github.com/ocsigen/ocsipersist/issues"
dev-repo: "git+https://github.com/ocsigen/ocsipersist.git"
build:   [ "dune" "build" "-p" name "-j" jobs ]

depends: [
  "dune" {>= "2.9"}
  "lwt" {>= "4.2.0"}
  "lwt_log"
  "xml-light"
  "ocsigenserver" {>= "3.0.0"}
  "ocsipersist-lib"
  "dbm"
]
