opam-version: "2.0"
name:         "ocsipersist-dynamosql"
version:      "1.0.2.1"
authors:      "The Ocsigen team <dev@ocsigen.org>"
maintainer:   "Jan Rochel <jan@besport.com>"
license:      "LGPL-2.1-only with OCaml-LGPL-linking-exception"
synopsis:     "Persistent key/value storage (for Ocsigen) using DynamoDB/PostgreSQL"
description:  "This package should help the transition from PostgreSQL to DynamoDB."

homepage: "https://github.com/ocsigen/ocsipersist"
bug-reports: "https://github.com/ocsigen/ocsipersist/issues"
dev-repo: "git+https://github.com/ocsigen/ocsipersist.git"
build:   [ "dune" "build" "-p" name "-j" jobs ]

depends: [
  "dune" {>= "2.9"}
  "lwt" {>= "4.2.0"}
  "lwt_log"
  "xml-light"
  "ocsigenserver" {>= "3.0.0"}
  "ocsipersist-lib"
  "bs-aws" {>= "6.1.0.2"}
]
