opam-version: "2.0"
name:         "ocsipersist-pgsql"
version:      "2.0.0"
authors:      "The Ocsigen team <dev@ocsigen.org>"
maintainer:   "Jan Rochel <jan@besport.com>"
license:      "LGPL-2.1-only WITH OCaml-LGPL-linking-exception"
synopsis:     "Persistent key/value storage for OCaml using PostgreSQL"
description:  "This library provides a PostgreSQL backend for the unified key/value storage frontend as defined in the ocsipersist package."

homepage: "https://github.com/ocsigen/ocsipersist"
bug-reports: "https://github.com/ocsigen/ocsipersist/issues"
dev-repo: "git+https://github.com/ocsigen/ocsipersist.git"
build:   [ "dune" "build" "-p" name "-j" jobs ]

depends: [
  "ocaml" {>= "4.08"}
  "dune" {>= "2.9"}
  "lwt" {>= "4.2.0"}
  "lwt_log"
  "ocsipersist" {>= "2.0.0" & < "2.1.0"}
  "pgocaml"
]
