opam-version: "2.0"
name:         "ocsipersist"
version:      "2.0.0"
authors:      "The Ocsigen team <dev@ocsigen.org>"
maintainer:   "Jan Rochel <jan@besport.com>"
license:      "LGPL-2.1-only with OCaml-LGPL-linking-exception"
synopsis:     "Persistent key-value storage for OCaml using multiple backends"
description:  "This is an virtual library defining a unified frontend for a number of key-value storage implementations. Implementations of the following backends currently exist: DBM, PostgreSQL, SQLite."

homepage: "https://github.com/ocsigen/ocsipersist"
bug-reports: "https://github.com/ocsigen/ocsipersist/issues"
dev-repo: "git+https://github.com/ocsigen/ocsipersist.git"
build:   [ "dune" "build" "-p" name "-j" jobs ]

depends: [
  "dune" {>= "2.9"}
  "lwt" {>= "4.2.0"}
  "ocsipersist-lib" {>= "2.0.0" & < "3.0.0"}
]
conflicts: [
	"ocsipersist-dbm" {< "2.0.0" | >= "2.1.0"}
	"ocsipersist-pgsql" {< "2.0.0" | >= "2.1.0"}
	"ocsipersist-sqlite" {< "2.0.0" | >= "2.1.0"}
]
