(library
 (name ocsipersist_lib)
 (public_name ocsipersist-lib)
 (modules ocsipersist_lib)
 (wrapped false)
 (libraries eio eio.unix))

(library
 (name ocsipersist)
 (public_name ocsipersist)
 (virtual_modules ocsipersist)
 (modules ocsipersist)
 (libraries ocsipersist_lib eio))

(env
 (_
  (flags
   (:standard -w -9-37-39))))
