(library
 (name ocsipersist_dbmtypes)
 (package ocsipersist-dbm)
 (modules_without_implementation ocsidbmtypes)
 (wrapped false)
 (modules ocsidbmtypes))

(library
 (name ocsipersist_dbm)
 (public_name ocsipersist.dbm)
 (implements ocsipersist)
 (modules ocsipersist)
 (libraries
  dbm
  lwt_log
  xml-light
  ocsipersist_dbmtypes
  ocsigenserver
  ocsipersist_lib)
 (optional))

(executable
 (public_name ocsidbm)
 (package ocsipersist-dbm)
 (modules ocsidbm)
 (libraries lwt lwt.unix dbm ocsipersist_dbmtypes)
 (modes byte exe))

(documentation
  (package ocsipersist-dbm)
  (mld_files index))
